fixed sign in with error message (screen became too big and was scrollable)

--- a/app/assets/stylesheets/shared/_form_style.scss
+++ b/app/assets/stylesheets/shared/_form_style.scss
@@ -1,3 +1,3 @@
 .form-container-to-vcenter {
-  height: calc(100vh - 56px);
+  height: calc(100vh - 170px);
 }
